# pytorch-compiler-playground

./: .gitignore  .gitmodules  CMakeLists.txt  PythonBackend.py  PythonBackend_test.py  Readme.md  ToyBackend.py  ToyBackend_test.py  build.sh  notes.md  requirements.txt  setup.py  test.py
csrc/: compiler.cpp  compiler.h  double_operators.cpp  fuse_relu.cpp  fuse_relu.h  operators.cpp  register_operator.cpp  register_torchscript.cpp  tensor_operators.cpp
python/backends/: CBackend.py  PythonBackend.py  ToyBackend.py
python/tests/: CBackend_test.py  PythonBackend_test.py  README.md  ToyBackend_test.py  common_backend_test.py  pybind_test.py
src/: operators.cpp  pybind_setup.py
tests/: CBackend_test.py  PythonBackend_test.py  ToyBackend_test.py  common.py  pybind_test.py
